# flowide-gtk

./: .gitignore  .travis.yml  Cargo.toml  Makefile  README.md
src/: actions.rs  build_ui.rs  build_ui_glade.rs  ide_runtime_client.rs  main.rs  menu.rs  notebook.rs  options.rs  toolbar.rs  ui.glade  ui_context.rs  ui_layout.rs  ui_layout_glade.rs
