[package]
name = "flowide"
version = "0.32.0"
authors = ["Andrew Mackenzie <andrew@mackenzie-serres.net>"]
edition = "2018"
description = "A (WIP) IDE for 'flow' programs"
license = "MIT"
documentation = "https://github.com/andrewdavidmackenzie/flow/README.md"
homepage = "http://andrewdavidmackenzie.github.io/flow/"
repository = "https://github.com/andrewdavidmackenzie/flow/"
readme = "README.md"

[[bin]]
name = "flowide"
path = "src/main.rs"

[features]
default = ["debugger", "metrics"]
debugger = []
metrics = []  # feature for tracking of metrics during execution

[dependencies.flowrstructs]
version = "0.25.0"
features = ["debugger"]

[dependencies]
flow_impl = "0.21.0"
flowc = "0.31.0"
flowr = "0.31.0"
provider = "0.25.0"

toml = "0.4"
url = "~2.1"
serde_json = "1.0"
log = "0.4.6"
lazy_static = "1"
gtk-rs-state = "0.4.1"
cairo-rs = "0.9"
gdk = "0.13"
gdk-pixbuf = "0.9"
gio = "0.9"
glib = "0.10"
gtk = "0.9"
pango = "0.9"
image = "=0.23.10"
