[package]
name = "flowide"
version = "0.32.0"
authors = ["Andrew Mackenzie <andrew@mackenzie-serres.net>"]
edition = "2018"
description = "A visual IDE for 'flow' programs"
license = "MIT"
documentation = "https://github.com/andrewdavidmackenzie/flow/README.md"
homepage = "http://andrewdavidmackenzie.github.io/flow/"
repository = "https://github.com/andrewdavidmackenzie/flow/"
readme = "README.md"

[[bin]]
name = "flowide"
path = "src/main.rs"

[features]
default = ["metrics"]
debugger = []
metrics = []  # feature for tracking of metrics during execution

[dependencies]
flow_impl = "0.21"
flowc = "0.33"
# Enable debugger feature in flowrstructs
#flowrstructs = { version = "0.25.0", features = ["debugger"] }
flowrstructs = "0.33"
# Do not enable the "distributed" feature for flowrlib
#flowr = { version = "0.33.0", default-features = false, features = ["debugger", "native", "metrics", "checks"] }
flowr = { version = "0.33.0", default-features = false, features = ["native", "metrics", "checks"] }
provider = "0.25.0"

clap = "~2"
simplog = "~1.2"
toml = "0.4"
url = "~2.1"
serde_json = "1.0"
log = "0.4.6"
lazy_static = "1"
gtk-rs-state = "0.4.1"
gdk = "0.13"
gdk-pixbuf = "0.9"
gio = "0.9"
gtk = {version = "0.9", features = ["v3_16"] }
image = "=0.23.10"
